Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -4,6 +4,10 @@ title: "Introduction"
 
 ![](/images/shipit-sneaking-otim-green.png)
 
+Otim is a digital asset operating system that unlocks smart on-chain actions for any Ethereum address without migrating funds or altering your existing security posture.
+
+Simply delegate to Otim, select an Action, construct an Instruction with execution conditions, and activate!
+
 ## Setting up
 
 The first step to world-class documentation is setting up your editing environments.
