Documentation edits made through Mintlify web editor

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -22,6 +22,18 @@ Otim lets your EOA do more, without sacrificing what makes it great. It’s as i
 
 Start here to learn about Otim's essential concepts and architecture.
 
+<CardGroup cols={2}>
+  <Card title="Concepts" icon="scroll">
+    Key concepts for understanding how Otim works.
+  </Card>
+
+  <Card title="Card" icon="sparkles" />
+</CardGroup>
+
+<Card title="Concepts" icon="bolt" color="BAFF26">
+  Key concepts for understanding how Otim works.
+</Card>
+
 <div class="grid-container">
   <a class="grid-item" href="/concepts/delegation">
     <h3>Concepts</h3>
