--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -27,24 +27,12 @@ Start here to learn about Otim's essential concepts and architecture.
     Key concepts for understanding how Otim works.
   </Card>
 
-  <Card title="Card" icon="sparkles" />
+  <Card title="Architecture" icon="compass-drafting">
+    Bird's-eye view of the overall Otim system.
+
+
+  </Card>
 </CardGroup>
-
-<Card title="Concepts" icon="bolt" color="BAFF26">
-  Key concepts for understanding how Otim works.
-</Card>
-
-<div class="grid-container">
-  <a class="grid-item" href="/concepts/delegation">
-    <h3>Concepts</h3>
-    <p>Key concepts for understanding how Otim works.</p>
-  </a>
-
-  <a class="grid-item" href="/developers/system-architecture">
-    <h3>Architecture</h3>
-    <p>Bird's-eye view of the overall Otim system.</p>
-  </a>
-</div>
 
 ## Use the Otim App
 
