Documentation edits made through Mintlify web editor

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -23,11 +23,11 @@ Otim lets your EOA do more, without sacrificing what makes it great. It’s as i
 Start here to learn about Otim's essential concepts and architecture.
 
 <CardGroup cols={2}>
-  <Card title="Concepts" icon="scroll">
+  <Card title="Concepts" icon="scroll" href="/concepts">
     Key concepts for understanding how Otim works.
   </Card>
 
-  <Card title="Architecture" icon="compass-drafting">
+  <Card title="Architecture" icon="compass-drafting" href="/developers/system-architecture">
     Bird's-eye view of the overall Otim system.
 
 
