Documentation edits made through Mintlify web editor

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -8,7 +8,7 @@ Otim is a digital asset operating system that unlocks smart on-chain actions for
 
 Simply delegate to Otim, select an Action, construct an Instruction with execution conditions, and activate!
 
-## Why Otim?
+# Why Otim?
 
 Otim lets your EOA do more, without sacrificing what makes it great. It’s as if your account got an upgrade — like Tony Stark putting on his Iron Man suit. You keep full custody, control, and security, but gain the ability to automate actions and execute complex strategies effortlessly.
 
@@ -18,7 +18,7 @@ Otim lets your EOA do more, without sacrificing what makes it great. It’s as i
 
 3. **Retain full custody and control**: Your EOA remains secure and in your hands. Otim adds superpowers, but you’re always in control of what happens and when. There's no need to learn or manage new types of accounts.
 
-## Get familiar with Otim
+# Get familiar with Otim
 
 Start here to learn about Otim's essential concepts and architecture.
 
@@ -29,34 +29,29 @@ Start here to learn about Otim's essential concepts and architecture.
 
   <Card title="Architecture" icon="compass-drafting" href="/developers/system-architecture">
     Bird's-eye view of the overall Otim system.
-
-
   </Card>
 </CardGroup>
 
-## Use the Otim App
+# Use the Otim App
 
 The Otim App will be available soon™️. In the meantime, check out our list of Action contracts to give you an idea of what Otim is capable of!
 
-<div class="grid-container">
-  <a class="grid-item" href="/developers/system-architecture/protocol/action-contracts/current-actions">
-    <h3>Current Actions</h3>
-    <p>Modular building blocks for any smart action.</p>
-  </a>
-</div>
+<CardGroup cols={1}>
+  <Card title="Current Actions" icon="bolt">
+    Modular building blocks for any smart action.
+  </Card>
+</CardGroup>
 
-## Build with Otim
+# Build with Otim
 
 If you’re ready to start building custom features or create your own Otim-powered application, jump right in starting here.
 
-<div class="grid-container">
-  <a class="grid-item" href="/developers/guides">
-    <h3>Build with Otim</h3>
-    <p>High-level guide for integrating Otim into your project.</p>
-  </a>
+<CardGroup cols="2">
+  <Card title="Build with Otim" icon="trowel-bricks">
+    High-level guide for integrating Otim into your project.
+  </Card>
 
-  <a class="grid-item" href="/developers/smart-contract-reference">
-    <h3>Smart Contract Reference</h3>
-    <p>Detailed Solidity documentation for our protocol.</p>
-  </a>
-</div>
+  <Card title="Smart Contract Reference" icon="sparkles">
+    Detailed Solidity documentation for the Otim protocol.
+  </Card>
+</CardGroup>
