--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -37,7 +37,7 @@ Start here to learn about Otim's essential concepts and architecture.
 The Otim App will be available soon™️. In the meantime, check out our list of Action contracts to give you an idea of what Otim is capable of!
 
 <CardGroup cols={1}>
-  <Card title="Current Actions" icon="bolt">
+  <Card title="Current Actions" icon="bolt" href="/developers/system-architecture/action-contracts/current-actions">
     Modular building blocks for any smart action.
   </Card>
 </CardGroup>
@@ -47,11 +47,11 @@ The Otim App will be available soon™️. In the meantime, check out our list o
 If you’re ready to start building custom features or create your own Otim-powered application, jump right in starting here.
 
 <CardGroup cols="2">
-  <Card title="Build with Otim" icon="trowel-bricks">
+  <Card title="Build with Otim" icon="trowel-bricks" href="/developers/guides/overview">
     High-level guide for integrating Otim into your project.
   </Card>
 
-  <Card title="Smart Contract Reference" icon="sparkles">
+  <Card title="Smart Contract Reference" icon="file-contract" href="/developers/smart-contract-reference">
     Detailed Solidity documentation for the Otim protocol.
   </Card>
 </CardGroup>
