Documentation edits made through Mintlify web editor

--- a/docs/concepts/actions-instructions.mdx
+++ b/docs/concepts/actions-instructions.mdx
@@ -8,6 +8,8 @@ Actions and Instructions work together as the building blocks of Otim's executio
 
 To give a simple example, you might create an Instruction to transfer 0.1 ETH to your friend Alice every week. Let's deconstruct this sentence:
 
-- "transfer" here refers to executing the `Transfer` Action contract
-- "0.1 ETH" and "to Alice" refer to specific `Transfer` Action arguments
-- "every week" refers to specific Instruction scheduling parameters
+* "transfer" here refers to executing the `Transfer` Action contract
+
+* "0.1 ETH" and "to Alice" refer to specific `Transfer` Action arguments
+
+* "every week" refers to specific Instruction scheduling parameters
