--- a/docs/developers/guides/custom-interactions/overview.mdx
+++ b/docs/developers/guides/custom-interactions/overview.mdx
@@ -4,6 +4,4 @@ title: Overview
 
 In the previous section we explained how to call custom smart contracts using Otim, but it's also possible to create apps using Otim that don't require custom smart contracts at all.
 
-Apps can use Otim to request that users execute specific Instructions. Apps can also request Trades, which are agreements in which two parties each execute an Instruction atomically, only if they both agree to the terms. 
-
-In the next two sections, we'll run through a simple example for each of these cases.
+Apps can use Otim to request that users execute specific Instructions. In the next section, we'll run through a simple example for this case.
