--- a/docs/developers/system-architecture/overview.mdx
+++ b/docs/developers/system-architecture/overview.mdx
@@ -2,21 +2,18 @@
 title: Overview
 ---
 
-![System Diagram](/img/system-diagram.png)
+![System Diagram](/img/system-diagram.png)In this section we'll give a technical overview of Otim's system architecture.
 
-In this section we'll give a technical overview of Otim's system architecture.
+<CardGroup cols={1}>
+  <Card title="Protocol (otim-protocol)" icon="sparkles" href="/developers/system-architecture/protocol/overview">
+    Protocol that defines Otim.
+  </Card>
 
-<div class="grid-container">
-  <a class="grid-item" href="/developers/system-architecture/protocol">
-    <h3>Protocol (otim-protocol)</h3>
-    <p>Protocol that defines Otim.</p>
-  </a>
-  <a class="grid-item" href="/developers/system-architecture/off-chain">
-    <h3>Off-chain (otim-offchain)</h3>
-    <p>Backend that powers Otim.</p>
-  </a>
-  <a class="grid-item" href="/developers/system-architecture/app">
-    <h3>App (otim-app)</h3>
-    <p>Frontend that directs Otim.</p>
-  </a>
-</div>
+  <Card title="Off-Chain (otim-offchain)" icon="sparkles" href="/developers/system-architecture/off-chain/overview">
+    Backend that powers Otim.
+  </Card>
+
+  <Card title="App (otim-app)" icon="sparkles" href="/developers/system-architecture/app/overview">
+    Frontend that directs Otim.
+  </Card>
+</CardGroup>
