Documentation edits made through Mintlify web editor

--- a/docs/developers/system-architecture/overview.mdx
+++ b/docs/developers/system-architecture/overview.mdx
@@ -9,7 +9,7 @@ title: Overview
     Protocol that defines Otim.
   </Card>
 
-  <Card title="Off-Chain (otim-offchain)" icon="sparkles" href="/developers/system-architecture/off-chain/overview">
+  <Card title="Off-chain (otim-offchain)" icon="sparkles" href="/developers/system-architecture/off-chain/overview">
     Backend that powers Otim.
   </Card>
 
