fix image handling and link handling

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -12,7 +12,7 @@ Simply delegate to Otim, select an Action, construct an Instruction with executi
 
 Otim lets your EOA do more, without sacrificing what makes it great. It’s as if your account got an upgrade — like Tony Stark putting on his Iron Man suit. You keep full custody, control, and security, but gain the ability to automate actions and execute complex strategies effortlessly.
 
-1. **Automate on-chain operations**: Construct Instructions and set conditions for when Actions — like payments, trades, or transfers — should happen. Otim automatically executes your Actions when the moment is right.
+1. **Automate on-chain operations**: Construct Instructions and set conditions for when Actions — like payments, swaps, or transfers — should happen. Otim automatically executes your Actions when the moment is right.
 
 2. **Zero trust in external actors**: Unlike other protocols, Otim ensures that trust remains on-chain, without computational validation falling on external validators or off-chain agents. Everything happens directly through the protocol itself.
 
@@ -23,11 +23,11 @@ Otim lets your EOA do more, without sacrificing what makes it great. It’s as i
 Start here to learn about Otim's essential concepts and architecture.
 
 <CardGroup cols={2}>
-  <Card title="Concepts" icon="scroll" href="/concepts">
+  <Card title="Concepts" icon="scroll" href="/docs/concepts">
     Key concepts for understanding how Otim works.
   </Card>
 
-  <Card title="Architecture" icon="compass-drafting" href="/developers/system-architecture">
+  <Card title="Architecture" icon="compass-drafting" href="/docs/developers/system-architecture">
     Bird's-eye view of the overall Otim system.
   </Card>
 </CardGroup>
@@ -37,7 +37,7 @@ Start here to learn about Otim's essential concepts and architecture.
 The Otim App will be available soon™️. In the meantime, check out our list of Action contracts to give you an idea of what Otim is capable of!
 
 <CardGroup cols={1}>
-  <Card title="Current Actions" icon="bolt" href="/developers/system-architecture/action-contracts/current-actions">
+  <Card title="Current Actions" icon="bolt" href="/docs/developers/system-architecture/action-contracts/current-actions">
     Modular building blocks for any smart action.
   </Card>
 </CardGroup>
@@ -47,11 +47,11 @@ The Otim App will be available soon™️. In the meantime, check out our list o
 If you’re ready to start building custom features or create your own Otim-powered application, jump right in starting here.
 
 <CardGroup cols="2">
-  <Card title="Build with Otim" icon="trowel-bricks" href="/developers/guides/overview">
+  <Card title="Build with Otim" icon="trowel-bricks" href="/docs/developers/guides/overview">
     High-level guide for integrating Otim into your project.
   </Card>
 
-  <Card title="Smart Contract Reference" icon="file-contract" href="/developers/smart-contract-reference">
+  <Card title="Smart Contract Reference" icon="file-contract" href="/docs/developers/smart-contract-reference">
     Detailed Solidity documentation for the Otim protocol.
   </Card>
 </CardGroup>
