--- a/docs/developers/system-architecture/off-chain/overview.mdx
+++ b/docs/developers/system-architecture/off-chain/overview.mdx
@@ -2,4 +2,6 @@
 title: Overview
 ---
 
-![Off-chain Diagram](/img/off-chain-diagram.png)In this section, we'll give an overview of how the various Otim off-chain components work on their own and together.
+In this section, we'll give an overview of how the various Otim off-chain components work on their own and together.
+
+![Off-chain Diagram](/images/off-chain-diagram.png)
