--- a/docs/developers/system-architecture/protocol/core-contracts/treasury.mdx
+++ b/docs/developers/system-architecture/protocol/core-contracts/treasury.mdx
@@ -2,4 +2,4 @@
 title: Treasury
 ---
 
-This contract holds all fees collected from Instruction executions. Each time an Instruction is executed on behalf of a user, a fee is collected and sent to this `Treasury` contract. To read more on Otim's fee structure, checkout the [Fee Structure](/concepts/fee-structure) page.
+This contract holds all fees collected from Instruction executions. Each time an Instruction is executed on behalf of a user, a fee is collected and sent to this `Treasury` contract. To read more on Otim's fee structure, checkout the [Fee Structure](/docs/concepts/fee-structure) page.
