--- a/docs/developers/system-architecture/protocol/overview.mdx
+++ b/docs/developers/system-architecture/protocol/overview.mdx
@@ -2,4 +2,6 @@
 title: Overview
 ---
 
-![Protocol Diagram](/img/protocol-diagram.png)In this section, we'll give an overview of how the Otim protocol works.
+![Protocol Diagram](/images/protocol-diagram.png)
+
+In this section, we'll give an overview of how the Otim protocol works.
