added sidebar titles to all pages

--- a/docs/concepts/actions-instructions.mdx
+++ b/docs/concepts/actions-instructions.mdx
@@ -1,5 +1,6 @@
 ---
-title: Actions & Instructions
+title: "Actions & Instructions"
+sidebarTitle: "Actions & Instructions"
 ---
 
 TODO: add diagram of how Actions and Instructions work together
