--- a/docs/concepts/fee-structure.mdx
+++ b/docs/concepts/fee-structure.mdx
@@ -1,5 +1,6 @@
 ---
-title: Fee Structure
+title: "Fee Structure"
+sidebarTitle: "Fee Structure"
 ---
 
 TODO: add a graphic or diagram to illustrate our fee structure
