--- a/docs/developers/guides/custom-actions/conditional.mdx
+++ b/docs/developers/guides/custom-actions/conditional.mdx
@@ -1,5 +1,6 @@
 ---
-title: When a Condition is Met
+title: "When a Condition is Met"
+sidebarTitle: "When a Condition is Met"
 ---
 
 For this example, let's say you stumble upon a mysterious Oracle contract 🔮 that displays a new random number every day. You're unsure about the Oracle's origin or purpose but for some reason you desperately want to know whenever it displays your favorite number. We've got you!
