--- a/docs/developers/guides/custom-actions/overview.mdx
+++ b/docs/developers/guides/custom-actions/overview.mdx
@@ -1,5 +1,6 @@
 ---
-title: Overview
+title: "Overview"
+sidebarTitle: "Overview"
 ---
 
 We're working hard to implement Action contracts that are useful right out of the box, but we're sure there are a million more ways to use the Otim protocol. This is exactly why we built the `Call` and `MultiCall` Actions.
