--- a/docs/developers/guides/custom-actions/time-intervals.mdx
+++ b/docs/developers/guides/custom-actions/time-intervals.mdx
@@ -1,5 +1,6 @@
 ---
-title: At Time Intervals
+title: "At Time Intervals"
+sidebarTitle: "At Time Intervals"
 ---
 
 For this example let's say you're terrible with remembering birthdays 😬 so you want to set up automatic on-chain reminders. Let's write a smart contract that will emit an event to remind you:
