--- a/docs/developers/guides/custom-interactions/overview.mdx
+++ b/docs/developers/guides/custom-interactions/overview.mdx
@@ -1,5 +1,6 @@
 ---
-title: Overview
+title: "Overview"
+sidebarTitle: "Overview"
 ---
 
 In the previous section we explained how to call custom smart contracts using Otim, but it's also possible to create apps using Otim that don't require custom smart contracts at all.
