--- a/docs/developers/guides/custom-interactions/request-instructions.mdx
+++ b/docs/developers/guides/custom-interactions/request-instructions.mdx
@@ -1,5 +1,6 @@
 ---
-title: Request Instructions
+title: "Request Instructions"
+sidebarTitle: "Request Instructions"
 ---
 
 For this example, let's say you're Netflix 🎥 and you want to support `USDC` subscription payments. Let's walk through how you could integrate Otim to support crypto subscriptions.
