--- a/docs/developers/smart-contract-reference.mdx
+++ b/docs/developers/smart-contract-reference.mdx
@@ -1,5 +1,6 @@
 ---
-title: Smart Contract Reference
+title: "Smart Contract Reference"
+sidebarTitle: "Smart Contract Reference"
 ---
 
 Coming soon™️!
