--- a/docs/developers/system-architecture/off-chain/executor.mdx
+++ b/docs/developers/system-architecture/off-chain/executor.mdx
@@ -1,5 +1,6 @@
 ---
-title: Executor
+title: "Executor"
+sidebarTitle: "Executor"
 ---
 
 The Executor is an off-chain agent that is designed to execute Instructions as soon as their conditions are valid on-chain.
