--- a/docs/developers/system-architecture/off-chain/overview.mdx
+++ b/docs/developers/system-architecture/off-chain/overview.mdx
@@ -1,5 +1,6 @@
 ---
-title: Overview
+title: "Overview"
+sidebarTitle: "Overview"
 ---
 
 In this section, we'll give an overview of how the various Otim off-chain components work on their own and together.
