--- a/docs/developers/system-architecture/overview.mdx
+++ b/docs/developers/system-architecture/overview.mdx
@@ -1,5 +1,6 @@
 ---
-title: Overview
+title: "Overview"
+sidebarTitle: "Overview"
 ---
 
 In this section we'll give a technical overview of Otim's system architecture.
