--- a/docs/developers/system-architecture/protocol/action-contracts/current-actions.mdx
+++ b/docs/developers/system-architecture/protocol/action-contracts/current-actions.mdx
@@ -1,5 +1,6 @@
 ---
-title: Current Actions
+title: "Current Actions"
+sidebarTitle: "Current Actions"
 ---
 
 Below is the first batch of Actions currently available to users, but many more Actions are in development!
