--- a/docs/developers/system-architecture/protocol/action-contracts/structure.mdx
+++ b/docs/developers/system-architecture/protocol/action-contracts/structure.mdx
@@ -1,5 +1,6 @@
 ---
-title: Structure
+title: "Structure"
+sidebarTitle: "Structure"
 ---
 
 Each Action contract must implement the `IAction` interface. This interface defines two external functions: `validate` and `execute`.
