--- a/docs/developers/system-architecture/protocol/core-contracts/instruction-storage.mdx
+++ b/docs/developers/system-architecture/protocol/core-contracts/instruction-storage.mdx
@@ -1,5 +1,6 @@
 ---
-title: InstructionStorage
+title: "InstructionStorage"
+sidebarTitle: "InstructionStorage"
 ---
 
 This helper contract holds the execution state of each Instruction for each user. This contract accurately maintains execution state for each Instruction while enforcing strict access control for storage writes. Only EOAs delegated to our specific instance of `OtimDelegate` can write to the storage of this contract and cannot call it directly. 
