--- a/docs/developers/system-architecture/protocol/core-contracts/otim-delegate.mdx
+++ b/docs/developers/system-architecture/protocol/core-contracts/otim-delegate.mdx
@@ -1,5 +1,6 @@
 ---
-title: OtimDelegate
+title: "OtimDelegate"
+sidebarTitle: "OtimDelegate"
 ---
 
 This is the main `otim-protocol` smart contract. This is the contract that users will delegate their EOAs to in order to enable Otim's features (also known as the "delegate contract"). It is this contract that actually executes within the context of the user's account. While the user is delegated to this contract, the runtime bytecode _is_ the user's account.
