--- a/docs/developers/system-architecture/protocol/instruction-flows/activation.mdx
+++ b/docs/developers/system-architecture/protocol/instruction-flows/activation.mdx
@@ -1,5 +1,6 @@
 ---
-title: Activation
+title: "Activation"
+sidebarTitle: "Activation"
 ---
 
 An Instruction's first execution (a.k.a. activation) is special because certain validity conditions are checked at this time that don't need to be checked for subsequent executions. Since Instructions are immutable and designed to be executed more than once, we can get a lot out of the way during activation.
