--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Introduction"
+sidebarTitle: "Introduction"
 ---
 
 ![shipit](/images/shipit-sneaking-otim-green.png)
@@ -37,7 +38,7 @@ Start here to learn about Otim's essential concepts and architecture.
 The Otim App will be available soon™️. In the meantime, check out our list of Action contracts to give you an idea of what Otim is capable of!
 
 <CardGroup cols={1}>
-  <Card title="Current Actions" icon="bolt" href="/docs/developers/system-architecture/action-contracts/current-actions">
+  <Card title="Current Actions" icon="bolt" href="/docs/developers/system-architecture/protocol/action-contracts/current-actions">
     Modular building blocks for any smart action.
   </Card>
 </CardGroup>
