--- a/docs/resources/appendix/eip-7702.mdx
+++ b/docs/resources/appendix/eip-7702.mdx
@@ -1,5 +1,6 @@
 ---
-title: EIP-7702 
+title: "EIP-7702"
+sidebarTitle: "EIP-7702"
 ---
 
 [EIP-7702](https://eips.ethereum.org/EIPS/eip-7702) is a new transaction type that allows EOAs to set persistent runtime bytecode in their account. This enables Ethereum accounts to delegate execution authority to a trusted smart contract while maintaining full control of their assets. At its core, EIP-7702 acts as a secure connector that allows EOAs to tap into smart contract functionality without changing their fundamental security model. This creates a foundation for building sophisticated account features while preserving the simplicity and security of traditional Ethereum accounts.
