--- a/docs/resources/glossary.mdx
+++ b/docs/resources/glossary.mdx
@@ -1,5 +1,6 @@
 ---
-title: Glossary
+title: "Glossary"
+sidebarTitle: "Glossary"
 ---
 
 | Term              | Description                                                                                                                                                                   |
