--- a/docs/use-cases.mdx
+++ b/docs/use-cases.mdx
@@ -1,5 +1,6 @@
 ---
-title: Use Cases
+title: "Use Cases"
+sidebarTitle: "Use Cases"
 ---
 
 Many modern, pull-based execution use cases share similar triggers and actions but serve distinct purposes. Otim's generalized architecture enables seamless execution of complex actions on-chain whenever instructed. Our most popular use cases revolve around automating actions on behalf of users——offering security and simplicity akin to traditional credit card payments.
