--- a/docs/developers/guides/custom-interactions/build-apps-with-us.mdx
+++ b/docs/developers/guides/custom-interactions/build-apps-with-us.mdx
@@ -1,5 +1,6 @@
 ---
-title: Build Apps with Us
+title: "Build Apps with Us"
+sidebarTitle: "Build Apps with Us"
 ---
 
 As you can see, it's easy to make apps powered by Otim! Don't hesitate to [reach out](https://t.me/otimlabs) with any questions on how to integrate.
