--- a/docs/developers/system-architecture/off-chain/api.mdx
+++ b/docs/developers/system-architecture/off-chain/api.mdx
@@ -1,5 +1,6 @@
 ---
-title: API
+title: "API"
+sidebarTitle: "API"
 ---
 
 Our web API acts as an interface between the Otim App and the rest of the system. While users can view account activity, craft new Instructions, and sign messages entirely in the App, some operations require access to Otim's backend system. Thanks to this web API, the App can read user data from the database and request the Executor to interact with the Otim protocol.
