--- a/docs/developers/system-architecture/protocol/instruction-flows/execution.mdx
+++ b/docs/developers/system-architecture/protocol/instruction-flows/execution.mdx
@@ -1,5 +1,6 @@
 ---
-title: Execution
+title: "Execution"
+sidebarTitle: "Execution"
 ---
 
 After activation, an Instruction can only be executed when the scheduling parameters and Action application logic allow. The user's signature does not need to be checked for subsequent executions because they have already committed to the execution dynamics defined in the Instruction. This means subsequent executions can be submitted by the Otim Executor in a strictly defined way without the user's on-going attention and intervention.
