--- a/docs/developers/system-architecture/protocol/instruction-flows/overview.mdx
+++ b/docs/developers/system-architecture/protocol/instruction-flows/overview.mdx
@@ -1,5 +1,6 @@
 ---
-title: Overview
+title: "Overview"
+sidebarTitle: "Overview"
 ---
 
 In this section, we'll get a deeper understanding of how Instructions are processed through Otim's core contracts at different points in their lifecycle.
