--- a/docs/developers/deployment-addresses.mdx
+++ b/docs/developers/deployment-addresses.mdx
@@ -3,4 +3,16 @@ title: "Deployment Addresses"
 sidebarTitle: "Deployment Addresses"
 ---
 
-Coming soon™️!
+## Sepolia (11155111)
+
+| Name                 | Address                                    |
+| -------------------- | ------------------------------------------ |
+| `OtimDelegate`       | 0xfb0902C1B39FA8f8a05740EdB5432117605EA0e1 |
+| `InstructionStorage` | 0x1BB67903C6055D740627283a56fE234AFFdFD462 |
+| `ActionManager`      | 0x49F172985681Ed2e4c621976a7Df0Ad3385f005C |
+| `Transfer`           | 0xDd4583B715e1eCF66Bb7B23f3CEae1ad38617E2f |
+| `TransferERC20`      | 0x29222092E4228E47B2fA567fEe3708BD4F359EDF |
+| `Refuel`             | 0xCd19f98aC8264Ec22d3A09eABc6B994395E5DE92 |
+| `RefuelERC20`        | 0xe91e36aDbc96a83B5d352E89e93a0A3fBf1f74E3 |
+| `Treasury`           | 0x95534E1bba0F95934DaE9d1E0b58206c30E00ffb |
+| `USDC` (Circle)      | 0x1c7D4B196Cb0C7B01d743Fbc6116a902379C7238 |
