updated get started page for api docs

--- a/api-reference/config/instruction-storage-address-by-chainid.mdx
+++ b/api-reference/config/instruction-storage-address-by-chainid.mdx
@@ -1,4 +1,4 @@
 ---
-title: 'Instruction storage address by chain ID'
+title: 'Instruction Storage address by chain ID'
 openapi: 'GET /config/instruction_storage/address/{chainId}'
 ---
