--- a/docs/developers/deployment-addresses.mdx
+++ b/docs/developers/deployment-addresses.mdx
@@ -5,14 +5,19 @@ sidebarTitle: "Deployment Addresses"
 
 ## Sepolia (11155111)
 
-| Name                 | Address                                    |
-| -------------------- | ------------------------------------------ |
-| `OtimDelegate`       | 0xfb0902C1B39FA8f8a05740EdB5432117605EA0e1 |
-| `InstructionStorage` | 0x1BB67903C6055D740627283a56fE234AFFdFD462 |
-| `ActionManager`      | 0x49F172985681Ed2e4c621976a7Df0Ad3385f005C |
-| `Transfer`           | 0xDd4583B715e1eCF66Bb7B23f3CEae1ad38617E2f |
-| `TransferERC20`      | 0x29222092E4228E47B2fA567fEe3708BD4F359EDF |
-| `Refuel`             | 0xCd19f98aC8264Ec22d3A09eABc6B994395E5DE92 |
-| `RefuelERC20`        | 0xe91e36aDbc96a83B5d352E89e93a0A3fBf1f74E3 |
-| `Treasury`           | 0x95534E1bba0F95934DaE9d1E0b58206c30E00ffb |
-| `USDC` (Circle)      | 0x1c7D4B196Cb0C7B01d743Fbc6116a902379C7238 |
+| Name                             | Address                                    |
+| -------------------------------- | ------------------------------------------ |
+| `OtimDelegate`                   | 0x6eb81ea5bC15f4f4a2D79FA15A75a43C1ee17cD0 |
+| `Gateway`                        | 0xBAd8390F1363f23208B8fc8f2F6FBcF7b607805f |
+| `InstructionStorage`             | 0x40F4F967E81E873Ec3929ABD9E0cEB9d3F4A28E3 |
+| `ActionManager`                  | 0x34D51Ec75c7F04a89EC1F27eCf8A872E4e7FfED6 |
+| `FeeTokenRegistry`               | 0x851f77Cb49FF3F19000621c707B920c5d4A85011 |
+| `Treasury`                       | 0x95534E1bba0F95934DaE9d1E0b58206c30E00ffb |
+| `TransferAction`                 | 0x838c90f3e8d4892dCfA67721CbbA7C86D3C059ef |
+| `TransferERC20Acton`             | 0xd6923efBF757c8bEFd45F78b36688A7cF32197C5 |
+| `RefuelAction`                   | 0x6B0A80473fCE8E6788AC5efB022Adc6A602F3b23 |
+| `RefuelERC20Action`              | 0x68C522c3E3e075096E67FF78DdB26c5d68e623B4 |
+| `UniswapV3ExactInputAction`      | 0x4BA9192Df27aF467BD3Bc272878854d76B0f3182 |
+| `SweepDepositAccountAction`      | 0x6B0FAF11F86e893ce1ad20d8EEfbB8BCfbD0431c |
+| `SweepDepositAccountERC20Action` | 0xe734c4a5C3aBA30498172213364dcA4Ef659F274 |
+| `USDC` (Circle)                  | 0x1c7D4B196Cb0C7B01d743Fbc6116a902379C7238 |
