removed unnecessary sections and pages, updated table formatting, added todos leading into mainnet

--- a/docs/developers/system-architecture/off-chain/api.mdx
+++ b/docs/developers/system-architecture/off-chain/api.mdx
@@ -4,3 +4,7 @@ sidebarTitle: "API"
 ---
 
 Our web API acts as an interface between the Otim App and the rest of the system. While users can view account activity, craft new Instructions, and sign messages entirely in the App, some operations require access to Otim's backend system. Thanks to this web API, the App can read user data from the database and request the Executor to interact with the Otim protocol.
+
+Check out all API endpoints in the [API Reference](/api-reference) guide.
+
+SDK coming soon™️!
