--- a/docs/developers/system-architecture/overview.mdx
+++ b/docs/developers/system-architecture/overview.mdx
@@ -8,15 +8,15 @@ In this section we'll give a technical overview of Otim's system architecture.
 ![System Diagram](/images/system-diagram.png)
 
 <CardGroup cols={1}>
-  <Card title="Protocol (otim-protocol)" icon="dice-d6" href="/docs/developers/system-architecture/protocol/overview">
+  <Card title="Protocol" icon="dice-d6" href="/docs/developers/system-architecture/protocol/overview">
     Protocol that defines Otim.
   </Card>
 
-  <Card title="Off-chain (otim-offchain)" icon="hat-wizard" href="/docs/developers/system-architecture/off-chain/overview">
+  <Card title="Off-chain" icon="hat-wizard" href="/docs/developers/system-architecture/off-chain/overview">
     Backend that powers Otim.
   </Card>
 
-  <Card title="App (otim-app)" icon="display" href="/docs/developers/system-architecture/app/overview">
+  <Card title="App" icon="display" href="/docs/developers/system-architecture/app/overview">
     Frontend that directs Otim.
   </Card>
 </CardGroup>
