--- a/docs/developers/system-architecture/protocol/action-contracts/current-actions.mdx
+++ b/docs/developers/system-architecture/protocol/action-contracts/current-actions.mdx
@@ -5,11 +5,13 @@ sidebarTitle: "Current Actions"
 
 Below is the first batch of Actions currently available to users, but many more Actions are in development!
 
-| Action Name     | Description                                                                                                           |
-| --------------- | --------------------------------------------------------------------------------------------------------------------- |
-| `Transfer`      | Send native currency to a target account at scheduled intervals.                                                      |
-| `TransferERC20` | Send tokens to a target account at scheduled intervals.                                                               |
-| `Refuel`        | Track the balance of a target account and send native currency if the target's balance falls below a given threshold. |
-| `RefuelERC20`   | Track the token balance of a target account and send tokens if the target's balance falls below a given threshold.    |
-| `Call`          | Execute an arbitrary function call at scheduled intervals.                                                            |
-| `MultiCall`     | Execute a batch of arbitrary function calls at scheduled intervals.                                                   |
+| Action    | Description                                                                                                        |
+| :-------- | :------------------------------------------------------------------------------------------------------------------|
+| Transfer  | Send tokens to a target account at scheduled intervals.                                                            |                                                             |
+| Refuel    | Track the balance of a target account and send tokens if the target's token balance falls below a given threshold. |
+| Swap      | Swap tokens using Uniswap V3 pools on a recurring basis.                                                           |
+| Sweep     | Any funds sent to a pre-defined address gets swept to any chosen destination                                       |
+| Call      | Execute an arbitrary function call at scheduled intervals.                                                         |
+| MultiCall | Execute a batch of arbitrary function calls at scheduled intervals.                                                |
+
+Find all of the above Actions' deployed contract addresses [here](/docs/developers/deployed-addresses).
