--- a/docs/developers/system-architecture/protocol/core-contracts/instruction-storage.mdx
+++ b/docs/developers/system-architecture/protocol/core-contracts/instruction-storage.mdx
@@ -6,3 +6,5 @@ sidebarTitle: "InstructionStorage"
 This helper contract holds the execution state of each Instruction for each user. This contract accurately maintains execution state for each Instruction while enforcing strict access control for storage writes. Only EOAs delegated to our specific instance of `OtimDelegate` can write to the storage of this contract and cannot call it directly. 
 
 Also, data is "siloed" by the user's address, meaning each user can only alter their own data. This strict access control strategy ensures that all user data is secure and accurate on-chain.
+
+The source code is available on [GitHub](TODO).
