--- a/docs/developers/system-architecture/protocol/overview.mdx
+++ b/docs/developers/system-architecture/protocol/overview.mdx
@@ -3,6 +3,8 @@ title: "Overview"
 sidebarTitle: "Overview"
 ---
 
-![Protocol Diagram](/images/protocol-diagram.png)
-
 In this section, we'll give an overview of how the Otim protocol works.
+
+Protocol smart contract audits can be found in [Security & Audits](/docs/resources/security-and-audits).
+
+![Protocol Diagram](/images/protocol-diagram.png)
