removed non-existent page ref + updated language in intro

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -35,7 +35,7 @@ Start here to learn about Otim's essential concepts and architecture.
 
 # Use the Otim App
 
-The Otim App will be available soon™️. In the meantime, check out our list of Action contracts to give you an idea of what Otim is capable of!
+The Otim App is now live at [app.otim.com](https://app.otim.com)! Check out our list of Actions to give you an idea of what Otim is capable of!
 
 <CardGroup cols={1}>
   <Card title="Current Actions" icon="bolt" href="/docs/developers/system-architecture/protocol/action-contracts/current-actions">
@@ -47,12 +47,8 @@ The Otim App will be available soon™️. In the meantime, check out our list o
 
 If you’re ready to start building custom features or create your own Otim-powered application, jump right in starting here.
 
-<CardGroup cols="2">
-  <Card title="Build with Otim" icon="trowel-bricks" href="/docs/developers/guides/overview">
+<CardGroup cols="1">
+  <Card title="Custom Actions and Instructions" icon="trowel-bricks" href="/docs/developers/guides/overview">
     High-level guide for integrating Otim into your project.
-  </Card>
-
-  <Card title="Smart Contract Reference" icon="file-contract" href="/docs/developers/smart-contract-reference">
-    Detailed Solidity documentation for the Otim protocol.
   </Card>
 </CardGroup>
