updated deployed contract addresses

--- a/docs/developers/deployed-addresses.mdx
+++ b/docs/developers/deployed-addresses.mdx
@@ -7,19 +7,17 @@ sidebarTitle: "Deployed Addresses"
   <Tab title="Ethereum Mainnet (1)">
     | Name                             | Address                                    |
     | :------------------------------- | :----------------------------------------- |
-    | `OtimDelegate`                   | TODO |
-    | `Gateway`                        | TODO |
-    | `InstructionStorage`             | TODO |
-    | `ActionManager`                  | TODO |
-    | `FeeTokenRegistry`               | TODO |
-    | `Treasury`                       | TODO |
-    | `TransferAction`                 | TODO |
-    | `TransferERC20Acton`             | TODO |
-    | `RefuelAction`                   | TODO |
-    | `RefuelERC20Action`              | TODO |
-    | `UniswapV3ExactInputAction`      | TODO |
-    | `SweepDepositAccountAction`      | TODO |
-    | `SweepDepositAccountERC20Action` | TODO |
+    | `OtimDelegate`                   | 0x23E5F9C457A69Ce776d20A8fe812A6701D66fcE8 |
+    | `Gateway`                        | 0x30891995b7aD3d4d38D16E14EE91B57372C091d2 |
+    | `InstructionStorage`             | 0xBeb6f683a7a247De61B9D56885f65331D7F55030 |
+    | `ActionManager`                  | 0xe41Dfd2706e3b35c230696F3107eda85eE73cE3e |
+    | `FeeTokenRegistry`               | 0xa972A2C093456c7298C3527fc87DE41F89A2eBaE |
+    | `Treasury`                       | 0x1FDdC4EEEc10E3317B27563Ad0126285A329350d |
+    | `TransferAction`                 | 0xE598ce7062A835A908C1e49D8d67E927E3c83F23 |
+    | `TransferERC20Action`            | 0x695175ba4F2594E0A42cF89790913dCc1CcCeD72 |
+    | `RefuelAction`                   | 0x8FD4DA969D38e512da77cA2f7C8C6D504A855543 |
+    | `RefuelERC20Action`              | 0x3Ad8f77fE11Ff9EB5c5776Eb87f605e889779Aac |
+    | `UniswapV3ExactInputAction`      | 0xd8BE0f31BbF564C584599069ED3cb93b9b2264c7 |
   </Tab>
   <Tab title="Sepolia (11155111)">
     | Name                             | Address                                    |
@@ -29,14 +27,14 @@ sidebarTitle: "Deployed Addresses"
     | `InstructionStorage`             | 0x40F4F967E81E873Ec3929ABD9E0cEB9d3F4A28E3 |
     | `ActionManager`                  | 0x34D51Ec75c7F04a89EC1F27eCf8A872E4e7FfED6 |
     | `FeeTokenRegistry`               | 0x851f77Cb49FF3F19000621c707B920c5d4A85011 |
-    | `Treasury`                       | 0x95534E1bba0F95934DaE9d1E0b58206c30E00ffb |
-    | `TransferAction`                 | 0x838c90f3e8d4892dCfA67721CbbA7C86D3C059ef |
-    | `TransferERC20Acton`             | 0xd6923efBF757c8bEFd45F78b36688A7cF32197C5 |
-    | `RefuelAction`                   | 0x6B0A80473fCE8E6788AC5efB022Adc6A602F3b23 |
-    | `RefuelERC20Action`              | 0x68C522c3E3e075096E67FF78DdB26c5d68e623B4 |
-    | `UniswapV3ExactInputAction`      | 0x4BA9192Df27aF467BD3Bc272878854d76B0f3182 |
-    | `SweepDepositAccountAction`      | 0x6B0FAF11F86e893ce1ad20d8EEfbB8BCfbD0431c |
-    | `SweepDepositAccountERC20Action` | 0xe734c4a5C3aBA30498172213364dcA4Ef659F274 |
+    | `Treasury`                       | 0xD4D329b837bCcf4c4FFd8731e2335Ae002f32497 |
+    | `TransferAction`                 | 0x22c130e275bb9aa8EaFE8316cF2C00701eF8FC17 |
+    | `TransferERC20Action`            | 0x4cA7AFbb5E3A467DfA96565CA9187EB8d2F5095b |
+    | `RefuelAction`                   | 0x264de6AA7083c4e33D7D1Ff814366Db2bf015fa1 |
+    | `RefuelERC20Action`              | 0xC4FF2B8A75ef1f4ac68627c5a81E1d19F3aa2622 |
+    | `UniswapV3ExactInputAction`      | 0x5Da7Ba6415BfB16114554C7086a5475152bbD971 |
+    | `SweepDepositAccountAction`      | 0x73C4E8818de09e2607523a40A94E7b1668DD4000 |
+    | `SweepDepositAccountERC20Action` | 0x4AA3Bce8f633d68CfC066f7B7DB78443BCFe1B95 |
     | `USDC` (Circle)                  | 0x1c7D4B196Cb0C7B01d743Fbc6116a902379C7238 |
     | `USDT` (Tether)                  | 0xaa8e23fb1079ea71e0a56f48a2aa51851d8433d0 |
   </Tab>
