fixed broken links

--- a/docs/developers/system-architecture/protocol/core-contracts/otim-delegate.mdx
+++ b/docs/developers/system-architecture/protocol/core-contracts/otim-delegate.mdx
@@ -7,4 +7,4 @@ This is the main `otim-protocol` smart contract. This is the contract that users
 
 `OtimDelegate` contains general Instruction validation and execution logic, as well as deactivation logic. Once a user is delegated to this contract, they can construct and sign Instructions to be executed on their behalf.
 
-The source code is available on [GitHub](TODO).
+The source code is available on [GitHub](https://github.com/otimlabs/otim-protocol/blob/main/src/OtimDelegate.sol).
