--- a/docs/developers/system-architecture/protocol/core-contracts/instruction-storage.mdx
+++ b/docs/developers/system-architecture/protocol/core-contracts/instruction-storage.mdx
@@ -7,4 +7,4 @@ This helper contract holds the execution state of each Instruction for each user
 
 Also, data is "siloed" by the user's address, meaning each user can only alter their own data. This strict access control strategy ensures that all user data is secure and accurate on-chain.
 
-The source code is available on [GitHub](TODO).
+The source code is available on [GitHub](https://github.com/otimlabs/otim-protocol/blob/main/src/core/InstructionStorage.sol).
