feat: add mainnet docs (#13)
* removed unnecessary sections and pages, updated table formatting, added todos leading into mainnet

* removed non-existent page ref + updated language in intro

* removed app section in sys arch overview

* removed faq (for now)

* updated deployed contract addresses

* fixed broken links

* removed soontm and todo's (noted to add post-mainnet)

* added hyperlinks for deployed addresses

--- a/docs/developers/system-architecture/protocol/core-contracts/treasury.mdx
+++ b/docs/developers/system-architecture/protocol/core-contracts/treasury.mdx
@@ -4,3 +4,5 @@ sidebarTitle: "Treasury"
 ---
 
 This contract holds all fees collected from Instruction executions. Each time an Instruction is executed on behalf of a user, a fee is collected and sent to this `Treasury` contract. To read more on Otim's fee structure, checkout the [Fee Structure](/docs/concepts/fee-structure) page.
+
+The source code is available on [GitHub](https://github.com/otimlabs/otim-protocol/blob/main/src/infrastructure/Treasury.sol).
