--- a/docs/resources/security-and-audits.mdx
+++ b/docs/resources/security-and-audits.mdx
@@ -3,4 +3,15 @@ title: "Security & Audits"
 sidebarTitle: "Security & Audits"
 ---
 
-Coming soon™️!
+## Otim Protocol Security Audits
+
+<Card horizontal title="aleph_v: Actions Security Assessment" href="https://github.com/otimlabs/otim-protocol/blob/main/audits/aleph_v-Actions.pdf">
+  May 7, 2025
+</Card>
+<Card horizontal title="Trail of Bits: Smart Contract Security Assessment" href="https://github.com/otimlabs/otim-protocol/blob/main/audits/TrailOfBits-Core.pdf">
+  March 25, 2025
+</Card>
+
+## Bug Bounty Program
+
+soon™️
