--- a/api-reference/instructions/instruction-estimate-max-priority-fee-per-gas-by-chainid.mdx
+++ b/api-reference/instructions/instruction-estimate-max-priority-fee-per-gas-by-chainid.mdx
@@ -1,4 +1,4 @@
 ---
-title: 'Fetch a slow, normal, and fast max priority fee per gas estimate by chain ID'
-openapi: 'GET /instruction/estimate/max_prority_fee_per_gas/{chainId}'
+title: 'Fetch suggested max priority fee per gas by chain ID'
+openapi: 'GET /instruction/estimate/max_priority_fee_per_gas/{chainId}'
 ---
